--- a/activities.html
+++ b/activities.html
@@ -8,7 +8,7 @@
   <link href="pacific.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="content">
   <div id="wrapper">
     <header>
       <h1>Pacific Trails Resort</h1>
