--- a/yurts.html
+++ b/yurts.html
@@ -8,7 +8,7 @@
   <link href="pacific.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="content">
   <div id="wrapper">
     <header>
       <h1><a href="index.html">Pacific Trails Resort</a></h1>
